--- a/XOPage.css
+++ b/XOPage.css
@@ -10,14 +10,130 @@ body{
 }
 
 
-#bg3D1{
-    height:800px;
+.wrapper{
+    width: 100%;
     
-    position: relative;
+    margin: 0 auto;
+    font-size-adjust: Arial;
+    font-size: 1cm;
+    position: absolute;
+    top: 250px;
+    left:25px;
+    z-index: 5;
+   
+
+    
+}
+
+#draw{
+    color: blue;
+}
+
+
+#playagain{
+
+    position: absolute;
+    background-color: rgb(8, 0, 0);
+    color: rgb(252, 248, 248);
+    border: 2px solid #f7faf7; /* Green */
+    left: 700px;
+    top: 450px;
+    padding: 14px 40px;
+    font-size: 24px;
+    z-index: 4;
+
+
+
+
+
 
 
 
 }
+
+.title{
+    text-transform: uppercase ;
+    text-align: center;
+    color: rgba(59, 59, 59, 0.2);
+    background: url("./burn.jpg") repeat-x;
+    -webkit-background-clip: text;
+    background-size: contain;
+    animation: fire 15s linear infinite ;
+    font-size: 4cm;
+    transform:rotate(-5deg)
+    
+
+}
+
+@keyframes fire{
+    0%{
+        background-position: left 0 top 10px;
+    }
+
+    50%{
+        background-position: left 130px top -10px;
+    }
+
+    100%{
+        background-position: left 250px top 0;
+    }
+
+
+
+
+
+}
+
+
+
+
+#bg3D1{
+    height:800px;
+    
+    position: relative;
+}
+
+#H3{
+    position: absolute;
+    left:700px;
+    top: 100px;
+    z-index: 2;
+    font-size: 10cm;
+    transform: rotate(10deg);
+}
+
+#H2{
+    position: absolute;
+    left:700px;
+    top: 100px;
+    z-index: 2;
+    font-size: 10cm;
+    transform: rotate(-10deg);
+
+}
+
+#H1{
+    position: absolute;
+    left:720px;
+    top: 100px;
+    z-index: 2;
+    font-size: 10cm;
+
+}
+
+
+#start{
+    position: absolute;
+    left:550px;
+    top: 190px;
+    z-index: 2;
+    font-size: 6cm;
+
+}
+
+
+
+
 
 #XO{
     display: grid;
@@ -29,6 +145,7 @@ body{
     position: absolute;
     top: 50px;
     left: 500px;
+    z-index: 1
 }
 
 
@@ -123,10 +240,36 @@ body{
     text-shadow: 2px 2px #0f0f0f;
 }
 
+#butpl1{
+    
+ background-color: rgb(5, 5, 5);
+  color: rgb(255, 255, 255);
+  border: 3px solid #a1a1a1; /* Green */
+ border-radius: 12px;
+ padding: 10px 24px;
+  font-size:24px;
+ position: absolute;
+  left : 335px;
+  top: 550px;
+     
+}
+
+#butpl1:hover {
+    background-color: #ffffff; /* Green */
+    color: rgb(0, 0, 0);
+    box-shadow: 5px 5px 5px 0 rgba(1, 19, 99, 0.952), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+
+
+
+
+
+
 
 #bg3D1d1h2{
     position: absolute;
-    left :100px;
+    left :130px;
     top:50px;
     font-size: 1.5cm;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -142,14 +285,14 @@ body{
     background-color: rgb(8, 8, 8);
     position: absolute;
     top:200px;
-    left:75px;
+    left:110px;
     background-image:'';   
     border: 3px solid rgb(7, 0, 0);
 }
 
 #bg3hpl2{
    position: absolute;
-    left :90px;
+    left :120px;
     top:500px;
     font-size: 1cm;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -157,6 +300,30 @@ body{
     font-weight: bolder;
     text-shadow: 2px 2px #0f0f0f;
 }
+
+#butpl2{
+    
+    background-color: rgb(5, 5, 5);
+     color: rgb(255, 255, 255);
+     border: 3px solid #a1a1a1; /* Green */
+    border-radius: 12px;
+    padding: 10px 24px;
+     font-size:24px;
+    position: absolute;
+     left : 10px;
+     top: 550px;
+        
+   }
+   
+   #butpl2:hover {
+       background-color: #ffffff; /* Green */
+       color: rgb(0, 0, 0);
+       box-shadow: 5px 5px 5px 0 rgba(1, 19, 99, 0.952), 0 17px 50px 0 rgba(0,0,0,0.19);
+   }
+
+
+   
+
 
 
 #Titan{
@@ -192,6 +359,10 @@ body{
     color: white;
     box-shadow: 10px 25px 25px 0 rgba(255, 251, 251, 0.952), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
+
+
+
 
 
 
