--- a/XOPage.css
+++ b/XOPage.css
@@ -7,7 +7,10 @@ body{
     background-repeat: no-repeat;
     background-size:cover;
     position: relative;
+    position:sticky;
 }
+
+
 
 
 .wrapper{
@@ -145,8 +148,34 @@ body{
     position: absolute;
     top: 50px;
     left: 500px;
-    z-index: 1
+    z-index: 1;
+    
 }
+
+#pl1lig{
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    background-color: rgb(251, 255, 0);
+    z-index: 5;
+    left:320px;
+    top: 62px;
+    border-radius: 50%;
+    
+}
+
+#pl2lig{
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    background-color: rgb(0, 2, 37);
+    z-index: 5;
+    left:60px;
+    top: 62px;
+    border-radius: 50%;
+    
+}
+
 
 
 
