--- a/HomePage.css
+++ b/HomePage.css
@@ -7,7 +7,70 @@ body{
     background-repeat: no-repeat;
     background-size:cover;
     position: relative;
+    
 }
+
+.loader_bg{
+    position: fixed;
+    z-index: 99999;
+    
+    width: 100%;
+    height: 100%;
+    background-color: rgb(4, 0, 59);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;
+
+}
+
+.loader{
+    border: 0 solid transparent;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 310px;
+    left: 720px;
+}
+
+.loader:before , .loader:after{
+    content: '';
+    border: 0.5em solid #ffffff;
+    border-radius: 50%;
+    width: inherit;
+    height: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: loader 1.5s linear infinite ;
+    opacity: 0;
+}
+
+.loader:before{
+   animation-delay: 0.5s  ;
+}
+
+
+@keyframes loader {
+    0%{
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    50%{
+        opacity: 1;
+    }
+
+    100%{
+        transform: scale(1);
+        opacity: 1;
+    }
+   
+}
+
+
+
+
 
 
 
