--- a/XOPage.css
+++ b/XOPage.css
@@ -255,6 +255,7 @@ body{
     left:75px;
     background-image: '';
     border: 3px solid rgb(7, 0, 0); 
+    border-radius: 12px;
      
 }
 
@@ -317,6 +318,7 @@ body{
     left:110px;
     background-image:'';   
     border: 3px solid rgb(7, 0, 0);
+    border-radius: 12px;
 }
 
 #bg3hpl2{
